0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_IR_from_opus.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_IR_from_opus.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_opus.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_opus.py:


Loading Bruker OPUS files
==========================

Here we load an experimental Bruker OPUS files and plot it.

.. GENERATED FROM PYTHON SOURCE LINES 16-24

.. code-block:: default


    import spectrochempy as scp

    Z = scp.read_opus(
        ["test.0000", "test.0001", "test.0002", "test.0003"], directory="irdata/OPUS"
    )
    print(Z)





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    NDDataset: [float64] a.u. (shape: (y:4, x:2567))




.. GENERATED FROM PYTHON SOURCE LINES 25-26

plot it

.. GENERATED FROM PYTHON SOURCE LINES 26-29

.. code-block:: default


    _ = Z.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_IR_from_opus_001.png
   :alt: plot read IR from opus
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_IR_from_opus_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 30-32

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 32-34

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.416 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_opus.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_IR_from_opus.py <plot_read_IR_from_opus.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_IR_from_opus.ipynb <plot_read_IR_from_opus.ipynb>`
