0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_IR_from_opus.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_IR_from_opus.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_opus.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_opus.py:


Loading Bruker OPUS files
=========================

Here we load an experimental Bruker OPUS files and plot it.

.. GENERATED FROM PYTHON SOURCE LINES 15-23

.. code-block:: Python


    import spectrochempy as scp

    Z = scp.read_opus(
        ["test.0000", "test.0001", "test.0002", "test.0003"], directory="irdata/OPUS"
    )
    Z






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <div class='scp-output'><details><summary>NDDataset: [float64] a.u. (shape: (y:4, x:2567))[merged [opus-AB]]</summary><div class="scp-output section"><details><summary>Summary</summary>
    <div class="scp-output section"><div class="attr-name">         name</div><div>:</div><div class="attr-value"> merged [opus-AB]</div></div>
    <div class="scp-output section"><div class="attr-name">       author</div><div>:</div><div class="attr-value"> runner@fv-az1696-90</div></div>
    <div class="scp-output section"><div class="attr-name">      created</div><div>:</div><div class="attr-value"> 2025-03-09 01:14:13+00:00</div></div>
    <div class="scp-output section"><div class="attr-name">  description</div><div>:</div><div class="attr-value"> <div>Concatenation of 4  datasets:<br/>               ( test, test, test, test )</div></div></div>
    <div class="scp-output section"><div class="attr-name">      history</div><div>:</div><div class="attr-value"> <div>2025-03-09 01:14:14+00:00> Created by concatenate<br/>               2025-03-09 01:14:14+00:00> Merged from several files</div></div></div></details></div>
    <div class="scp-output section"><details><summary>          Data </summary>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> absorbance</div></div>
    <div class="scp-output section"><div class="attr-name">       values</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='numeric'>         [[0.000459 0.0004219 ...   0.5771   0.6324]<br/>          [0.000451 0.0004229 ...   0.5752   0.6311]<br/>          [0.0002479 0.0002325 ...   0.5809   0.6376]<br/>          [0.0003685 0.0003442 ...   0.5827   0.6388]] a.u.</div>
    <div class="scp-output section"><div class="attr-name">        shape</div><div>:</div><div class="attr-value"> (y:4, x:2567)</div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `x`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 2567</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> wavenumber</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[    3998     3997 ...    700.7    699.4] cm⁻¹</div></div></div></details></div>
    <div class="scp-output section"><details><summary>     Dimension `y`</summary>
    <div class="scp-output section"><div class="attr-name">         size</div><div>:</div><div class="attr-value"> 4</div></div>
    <div class="scp-output section"><div class="attr-name">        title</div><div>:</div><div class="attr-value"> acquisition timestamp (GMT)</div></div>
    <div class="scp-output section"><div class="attr-name">  coordinates</div><div>:</div><div class="attr-value"> <div class='numeric'>[1.581e+09 1.581e+09 1.581e+09 1.581e+09] s</div></div></div>
    <div class="scp-output section"><div class="attr-name">       labels</div><div>:</div><div class="attr-value"> ... </div></div>
    <div class='label'>         [[  2020-02-06 12:09:58.095000+00:00   2020-02-06 12:10:02.232000+00:00   2020-02-06 12:10:06.368000+00:00   2020-02-06 12:10:10.505000+00:00]<br/>          [  MCT D317 1mm² [8500 - 700 Cm-1]   MCT D317 1mm² [8500 - 700 Cm-1]   MCT D317 1mm² [8500 - 700 Cm-1]   MCT D317 1mm² [8500 - 700 Cm-1]]<br/>          [  /home/runner/.spectrochempy/testdata/irdata/OPUS/test.0000   /home/runner/.spectrochempy/testdata/irdata/OPUS/test.0001<br/>             /home/runner/.spectrochempy/testdata/irdata/OPUS/test.0002   /home/runner/.spectrochempy/testdata/irdata/OPUS/test.0003]]</div></details></div></details></div>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 24-25

plot it

.. GENERATED FROM PYTHON SOURCE LINES 25-28

.. code-block:: Python


    Z.plot()




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_IR_from_opus_001.png
   :alt: plot read IR from opus
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_IR_from_opus_001.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 29-33

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

scp.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.469 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_opus.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_IR_from_opus.ipynb <plot_read_IR_from_opus.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_IR_from_opus.py <plot_read_IR_from_opus.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_read_IR_from_opus.zip <plot_read_IR_from_opus.zip>`
